# fprime-vorago

./: .gitmodules  NOTICE.txt  README.md  library.cmake  pyproject.toml  setup.py
.github/actions/spelling/: allow.txt  candidate.patterns  expect.txt  patterns.txt
.github/workflows/: format-check.yml  python-format.yml  spelling.yml
Va416x0/: CMakeLists.txt
Va416x0/Drv/: CMakeLists.txt
Va416x0/Drv/AdcSampler/: AdcSampler.cpp  AdcSampler.fpp  AdcSampler.hpp  CMakeLists.txt
Va416x0/Drv/DmaDriver/: CMakeLists.txt  DmaControlStructure.cpp  DmaControlStructure.hpp  DmaDriver.cpp  DmaDriver.fpp  DmaDriver.hpp
Va416x0/Drv/I2cController/: CMakeLists.txt  I2cController.cpp  I2cController.fpp  I2cController.hpp
Va416x0/Drv/PwmDriver/: CMakeLists.txt  PwmDriver.cpp  PwmDriver.fpp  PwmDriver.hpp
Va416x0/Drv/SeggerByteStream/: CMakeLists.txt  SeggerByteStream.cpp  SeggerByteStream.fpp  SeggerByteStream.hpp  gds_plugin.py
Va416x0/Drv/SpiController/: CMakeLists.txt  SpiController.cpp  SpiController.fpp  SpiController.hpp
Va416x0/Drv/SysTickCycler/: CMakeLists.txt  SysTickCycler.cpp  SysTickCycler.fpp  SysTickCycler.hpp
Va416x0/Drv/TimerDriver/: CMakeLists.txt  TimerDriver.cpp  TimerDriver.fpp  TimerDriver.hpp
Va416x0/Drv/TimerPwm/: CMakeLists.txt  TimerPwm.cpp  TimerPwm.hpp
Va416x0/Mmio/: CMakeLists.txt
Va416x0/Mmio/Adc/: Adc.cpp  Adc.hpp  CMakeLists.txt
Va416x0/Mmio/Amba/: Amba.cpp  Amba.hpp  AmbaStub.cpp  CMakeLists.txt
Va416x0/Mmio/ClkGen/: CMakeLists.txt  ClkGen.cpp  ClkGen.hpp
Va416x0/Mmio/ClkTree/: CMakeLists.txt  ClkTree.cpp  ClkTree.fpp  (+4 more)
Va416x0/Os/: CMakeLists.txt
Va416x0/Os/TimerRawTime/test/impl/: CMakeLists.txt  StaticClkTreeCfg.hpp  TimerRawTimeTest.cpp  VectorTableIsr.cpp
Va416x0/Ports/: AdcPorts.fpp  CMakeLists.txt  TimePorts.fpp
Va416x0/Svc/: CMakeLists.txt
Va416x0/Types/: AdcTypes.fpp  AdcTypes.hpp  CMakeLists.txt  Optional.hpp  Types.fpp
cmake/autocoders/: generate_build_info.py  python_autocoder.cmake
cmake/platform/: va416x0-baremetal.cmake
cmake/toolchain/: check_library_unaligned.cmake  va416x0-baremetal-no-lto.cmake  va416x0-baremetal-nostrb-profiler.cmake  va416x0-baremetal-nostrb.cmake  va416x0-baremetal-profiler.cmake  va416x0-baremetal.cmake  va416x0.ld  verify_nostrb.py
config/: CMakeLists.txt  IsrPriorityCfg.hpp  ProfilerCfg.hpp
config-vorago/: AdcCfg.fpp  CMakeLists.txt  ProfilerCfg.hpp
config-vorago/docs/: sdd.md
(+177 files in other folders)
